objects/UNITY_MulePicklistMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mappings to keep related the picklist between Mulesoft and Salesforce</description>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>SourceField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>SourceType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue__c</fullName>
        <label>SourceValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>TargetField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>TargetType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <label>TargetValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>UNITY Mule Picklist Mapping</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>NAME</columns>
        <columns>SourceField__c</columns>
        <columns>SourceType__c</columns>
        <columns>SourceValue__c</columns>
        <columns>TargetField__c</columns>
        <columns>TargetType__c</columns>
        <columns>TargetValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>